2003-08-04  Dave Hyatt  <hyatt@apple.com>

	Fix for 3127909, copied text matched the document source instead of the
	rendered HTML.  This patch makes sure that the TextRuns are walked instead
	of just blindly pulling the text out of the DOM node.
	
        Reviewed by rjw

        * khtml/khtml_part.cpp:
        (KHTMLPart::selectedText):
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::attributedString):

2003-08-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin and Dave.

	- fixed 3363557 - REGRESSION (90-91): float:left element inside position:absolute element positioned wrong

        * khtml/rendering/render_block.cpp:
        (RenderBlock::calcInlineMinMaxWidth): Remove attempt to break line
	after flaot that follows a non-float. Removing this code fixes the
	regression and leaves pepboys and the meyerweb matrix theme
	working properly. Also, I could not find any evidence in the CSS2
	spec that what this code is trying to do is right.

2003-08-05  Ken Kocienda  <kocienda@apple.com>

        Reviewed by John

        Fix for this bug:

        <rdar://problem/3364251>: Modify KURL to call improved NSURL creation API

        * kwq/KWQKURL.mm:
        (KURL::getNSURL): Modify to use CFURLCreateAbsoluteURLWithBytes to create
        the NSURL.

2003-08-05  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Maciej

	In KWQKURL.mm, we copy the contents of a URL path from a source buffer
	to a destination buffer. In the loop, we often access dst[-1]. It was
	not entirely clear that this did not underrun the buffer. Upon further
	inspection, it seems clear that it does not, but this small change
	makes this more clear, and adds an assertion that all is well with
	regard to indexing into the dst buffer.

        * kwq/KWQKURL.mm:
        (copyPathRemovingDots)

2003-08-01  Richard Williamson   <rjw@apple.com>

	Fixed 3095376.  Implemented correct selection behavior for rtl scripts.
	We still use our Arabic and Hebrew layout scheme.
